transition var, wrapper-fluid

--- a/portfolio/on-game/index.jade
+++ b/portfolio/on-game/index.jade
@@ -66,23 +66,23 @@ html(lang="en")
 								td.on-game-score-block__table-cell.on-game-score-block__table-cell--logo.on-game-score-block__table-cell--united
 
 				section.section.project-features.project-features--on-game
-					.section__wrapper
-						ul.project-features__list
-							li.project-features__item
-								.project-features__icon-wrapper
-									include ../../icons/on-game-features-ic1
-								h3.project-features__item-title Challenge
-								p.project-features__item-descr Development a web application for a sports betting company for the audience of 5 million users. Improve desktop app performance two folds and mobile app performance from 30 seconds to 10 seconds.
-							li.project-features__item
-								.project-features__icon-wrapper
-									include ../../icons/on-game-features-ic2
-								h3.project-features__item-title Challenge Accepted
-								p.project-features__item-descr Based on client requirements, our team developed a technological complex web application that gained more than 120 million sessions per month. The ability to find and watch particular game highlights was implemented through the extension to existing IPTV software. The program also had integrated video batch downloading.
-							li.project-features__item
-								.project-features__icon-wrapper
-									include ../../icons/on-game-features-ic3
-								h3.project-features__item-title Performance Improvement
-								p.project-features__item-descr Desktop app performance was improved from 9 seconds to 5 seconds, mobile app performance was drastically improved from 30 seconds to 4 seconds.
+					//- .section__wrapper
+					ul.project-features__list
+						li.project-features__item
+							.project-features__icon-wrapper
+								include ../../icons/on-game-features-ic1
+							h3.project-features__item-title Challenge
+							p.project-features__item-descr Development a web application for a sports betting company for the audience of 5 million users. Improve desktop app performance two folds and mobile app performance from 30 seconds to 10 seconds.
+						li.project-features__item
+							.project-features__icon-wrapper
+								include ../../icons/on-game-features-ic2
+							h3.project-features__item-title Challenge Accepted
+							p.project-features__item-descr Based on client requirements, our team developed a technological complex web application that gained more than 120 million sessions per month. The ability to find and watch particular game highlights was implemented through the extension to existing IPTV software. The program also had integrated video batch downloading.
+						li.project-features__item
+							.project-features__icon-wrapper
+								include ../../icons/on-game-features-ic3
+							h3.project-features__item-title Performance Improvement
+							p.project-features__item-descr Desktop app performance was improved from 9 seconds to 5 seconds, mobile app performance was drastically improved from 30 seconds to 4 seconds.
 
 				section.section.section--without-padding-bottom.section--on-game-big-section
 					section.section.section--without-padding-top.section--without-padding-bottom
