--- a/styl/blocks/btn.styl
+++ b/styl/blocks/btn.styl
@@ -12,14 +12,14 @@
 	background-color transparent
 	border solid 2px #8492af
 	border-radius 4px
-	transition all 0.3s
+	transition all $transition-duration
 	cursor pointer
 	&--on-game
 		color #555
 		border-color #555
 	svg
 		*
-			transition all 0.3s
+			transition all $transition-duration
 	&:hover, &:active
 		color #fff
 		background-color #ff6955
