--- a/styl/blocks/logo.styl
+++ b/styl/blocks/logo.styl
@@ -28,6 +28,11 @@
 			svg
 				&:first-child
 					margin-right 1rem
+					transition all 0.7s
 				&:last-child
 					display block
 					width 113px
+			&:hover
+				svg
+					&:first-child
+						transform rotateY(180deg)
