--- a/styl/blocks/on-game-score-block.styl
+++ b/styl/blocks/on-game-score-block.styl
@@ -65,3 +65,12 @@
 
 	.on-game-score-block__logos
 		height 259px
+		
+@media $desktop-widths
+
+	.on-game-score-block
+		display flex
+		justify-content space-between
+		width 50rem
+		> *
+			width 48%
