--- a/styl/blocks/page-footer.styl
+++ b/styl/blocks/page-footer.styl
@@ -14,9 +14,7 @@
 			color #6a6a6a
 	
 .page-footer__wrapper
-	// wrapper()
-	width 90%
-	margin 0 auto
+	wrapper-fluid()
 	text-align center
 	
 .page-footer__main-nav
