--- a/styl/blocks/page-header.styl
+++ b/styl/blocks/page-header.styl
@@ -16,7 +16,7 @@
 		background-position center
 
 .page-header__wrapper
-	wrapper()
+	wrapper-fluid()
 	position relative
 	display flex
 	flex-direction column
