--- a/styl/blocks/project-item.styl
+++ b/styl/blocks/project-item.styl
@@ -4,7 +4,7 @@
 	min-height 25rem
 	background-repeat no-repeat
 	background-size cover
-	transition all 0.3s
+	transition all $transition-duration
 	*
 		z-index 2
 	&--booking
@@ -72,7 +72,7 @@
 	line-height 1.5
 	text-align center
 	color: rgba(248,249,251,.5);
-	transition all 0.3s
+	transition all $transition-duration
 	
 @media $tablet-widths
 
