--- a/styl/blocks/services.styl
+++ b/styl/blocks/services.styl
@@ -19,7 +19,7 @@
 		background-image url("../images/gif/relocation.gif")
 	
 .services__item-wrapper
-	wrapper()
+	wrapper-fluid()
 	display flex
 	flex-direction column
 	align-items center
