--- a/styl/mixins.styl
+++ b/styl/mixins.styl
@@ -9,6 +9,13 @@ wrapper()
 		
 	@media $desktop-large-widths
 		width 1400px
+		
+wrapper-fluid()
+	width: 85%
+	margin 0 auto
+	
+	@media $desktop-large-widths
+		width 1400px
 
 clearfix()
 	&::after
