--- a/styl/variables.styl
+++ b/styl/variables.styl
@@ -10,6 +10,8 @@ $main-font = Roboto
 $main-color = #0e1a35
 $main-color--on-game = #333
 
+$transition-duration = 0.3s
+
 $tablet-widths = "(min-width: 768px)"
 $desktop-widths = "(min-width: 1200px)"
 $desktop-large-widths = "(min-width: 1400px)"
