--- a/styl/blocks/input-box.styl
+++ b/styl/blocks/input-box.styl
@@ -12,10 +12,10 @@
 		border-radius 4px
 		border solid 1px rgba(#576076, 0.5)
 		outline none
-		transition all .3s
+		transition all $transition-duration
 		&::placeholder
 			color rgba(87, 96, 118, 0.5)
-			transition all .5s
+			transition all 0.5s
 		&:hover
 			border-color #576076
 		&:focus
