--- a/styl/blocks/project-switcher.styl
+++ b/styl/blocks/project-switcher.styl
@@ -3,7 +3,7 @@
 	font-family $main-font
 
 .project-switcher__wrapper
-	wrapper()
+	wrapper-fluid()
 	display flex
 	justify-content space-between
 	
@@ -11,11 +11,11 @@
 	display flex
 	align-items center
 	font-size 0
-	transition all 0.3s
+	transition all $transition-duration
 	svg
 		*
 			fill rgba(#333, 0.5)
-			transition all 0.3s
+			transition all $transition-duration
 	&--prev
 		.project-switcher__arrow-icon
 			margin-right 1rem
