--- a/styl/blocks/slider.styl
+++ b/styl/blocks/slider.styl
@@ -45,7 +45,7 @@
 	ul-reset()
 	display flex
 	width 300%
-	transition all 0.3s ease
+	transition all $transition-duration ease
 
 .slider__slide
 	width 100%
