--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -22,7 +22,7 @@
 		bottom-with-gradient(#4444b9, #ec523e)
 	&--on-game-score-block
 		padding-top 0
-	&--on-game-big-section
+	&--on-game-big
 		background-image url("../photos/on-game/bg.jpg")
 		background-size cover
 		background-position center
@@ -120,9 +120,27 @@
 @media $desktop-widths
 
 	.section
+		&--projects-reverse
+			display flex
+			flex-wrap wrap
+			> .section
+				display flex
+				&:nth-child(even)
+					> .section__wrapper
+						order 2
+						.section__title, .section__text
+							text-align left
+				> *
+					width 50%
+					margin 0
+				> .section__wrapper
+					// max-width 30rem
+					display flex
+					flex-direction column
+					justify-content center
+					padding 0 5rem
+					.section__title, .section__text
+						text-align right
+			
 		&--on-game-score-block
 			padding-top 5rem
-
-	.section__text
-		padding-right 5rem
-		padding-left 5rem
