--- a/styl/blocks/project-features.styl
+++ b/styl/blocks/project-features.styl
@@ -65,8 +65,16 @@
 	.project-features
 		&--on-game
 			.project-features__list
+				position relative
 				box-sizing border-box
 				width 26rem
+				&::before
+					content ""
+					position absolute
+					top 0
+					left 22px
+					height 100%
+					border-left 2px solid #555
 				
 			.project-features__item
 				padding-top 0
@@ -78,39 +86,35 @@
 					.project-features__icon-wrapper
 						top 50%
 						left 0
+						height 40%
 						&::before
-							height 87px
+							width 100%
+							height 100%
+							top 0
+							left 0
+							background-color transparent
 				&:nth-child(1)
 					.project-features__icon-wrapper
 						left 5px
-				&:nth-child(2)
-					.project-features__icon-wrapper
-						top 35%
+				// &:nth-child(2)
+				// 	.project-features__icon-wrapper
+				// 		top 35%
 				&:nth-child(3)
 					.project-features__icon-wrapper
-						top 10%
+						// top 10%
 						left 5px
-						&::after
-							content ""
-							position absolute
-							top 120%
-							left 43%
-							width 2px
-							height 39px
-							background-color #555
 			
 			.project-features__icon-wrapper
 				left 0
-				top 45%
-				transform translateX(0)
+				top 50%
+				height 40%
+				transform translateX(0) translateY(-50%)
 				&::before
-					content ""
-					position absolute
-					bottom 120%
-					left 43%
-					width 2px
-					height 54px
-					background-color #555
+					width 100%
+					height 100%
+					top 0
+					left 0
+					background-color transparent
 				
 			.project-features__item-title
 				text-align left
@@ -123,14 +127,74 @@
 	.project-features
 		&--on-game
 			.project-features__list
-				wrapper-fluid()
+				width 1130px
 	
 			.project-features__item
-				padding-top 6rem
+				padding-top 4.5rem
 				padding-left 0
+				margin-bottom 0
 				&:nth-child(n+2)
-					padding-top 6rem
+					padding-top 4.5rem
 					padding-left 0
-
+				&:nth-child(1)
+					.project-features__icon-wrapper
+						top 0
+						left 50%
+						transform translateX(-50%)
+						&::before
+							display none
+							
+				&:nth-child(2)
+					.project-features__icon-wrapper
+						top 0
+						left 50%
+						transform translateX(-50%)
+						&::before
+							top 50%
+							left 150%
+							width 20rem
+							height 2px
+							transform translateY(-50%)
+						&::after
+							content ""
+							position absolute
+							top 50%
+							right 150%
+							width 20rem
+							height 2px
+							background-color #555
+							transform translateY(-50%)
+							
+				&:nth-child(3)
+					.project-features__icon-wrapper
+						top 0
+						left 50%
+						transform translateX(-50%)
+						&::before, &::after
+							display none
+						
+			.project-features__item-title
+				text-align center
+	
+			.project-features__item-descr
+				text-align center
+						
 	.project-features__list
 		flex-direction row
+		justify-content space-between
+		width 1240px
+		
+	.project-features__item
+		width 18.5rem
+		margin-bottom 0
+		
+	.project-features__icon-wrapper
+		top 0
+		left 50%
+		transform translateX(-50%)
+		
+	.project-features__item-title
+		text-align center
+		
+	.project-features__item-descr
+		text-align center
