--- a/styl/blocks/project-features.styl
+++ b/styl/blocks/project-features.styl
@@ -68,25 +68,41 @@
 				position relative
 				box-sizing border-box
 				width 26rem
+				// &::before
+				// 	content ""
+				// 	position absolute
+				// 	top 0
+				// 	left 22px
+				// 	height 100%
+				// 	border-left 2px solid #555
+				
+			.project-features__item
+				position relative
+				padding-top 0
+				padding-bottom 3.2rem
+				padding-left 4.5rem
+				// margin-bottom 3.2rem
 				&::before
 					content ""
 					position absolute
+					width 2px
+					height 20%
 					top 0
 					left 22px
-					height 100%
-					border-left 2px solid #555
-				
-			.project-features__item
-				padding-top 0
-				padding-bottom 0
-				padding-left 4.5rem
-				margin-bottom 3.2rem
+					background-color #555
+				&::after
+					content ""
+					position absolute
+					width 2px
+					height 20%
+					bottom 0
+					left 22px
+					background-color #555
 				&:nth-child(n+2)
 					padding-top 0
 					.project-features__icon-wrapper
 						top 50%
 						left 0
-						height 40%
 						&::before
 							width 100%
 							height 100%
@@ -107,7 +123,7 @@
 			.project-features__icon-wrapper
 				left 0
 				top 50%
-				height 40%
+				// height 60%
 				transform translateX(0) translateY(-50%)
 				&::before
 					width 100%
@@ -115,6 +131,9 @@
 					top 0
 					left 0
 					background-color transparent
+				// svg
+				// 	width auto
+				// 	height 100%
 				
 			.project-features__item-title
 				text-align left
