--- a/portfolio/on-game/index.jade
+++ b/portfolio/on-game/index.jade
@@ -25,7 +25,9 @@ html(lang="en")
 					.section__wrapper
 						span.section__project-type Mobile Development
 						h1.section__title ON-GAME
-						p.section__text Due to the rise in popularity of mobile devices a sports betting company asked us to develop a mobile application. The project had to enable client’s audience to easily follow major sports’ updates, statistics, upcoming events, as well as to place a wager. The company’s audience already had a 5 million users, so the mobile application had to be compatible with the already existing website and moreover be convenient for the users. Based on client requirements, our team developed a technologically complex mobile application. Placing a wager through mobile app became the same simple as placing through the website. ON-GAME gained more than 120 million sessions per month. The ability to find and watch particular game highlights was implemented through an extension to existing IPTV software. ON-GAME also has integrated video batch downloading.
+						p.section__text Due to the rise in popularity of mobile devices a sports betting company asked us to develop a mobile application. 
+							span.section__text.section__text--hidden-on-mobile The project had to enable client’s audience to easily follow major sports’ updates, statistics, upcoming events, as well as to place a wager. The company’s audience already had a 5 million users, so the mobile application had to be compatible with the already existing website and moreover be convenient for the users. Based on client requirements, our team developed a technologically complex mobile application. Placing a wager through mobile app became the same simple as placing through the website. 
+							| ON-GAME gained more than 120 million sessions per month. The ability to find and watch particular game highlights was implemented through an extension to existing IPTV software. ON-GAME also has integrated video batch downloading.
 				
 				section.section.section--on-game-score-block
 					.on-game-score-block
@@ -105,7 +107,7 @@ html(lang="en")
 				section.section.section--on-game-technologies
 					.section__wrapper
 						h2.section__title Technologies
-						p.section__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+						p.section__text For development of a sports betting application ON-GAME our engineering team used the following set of tools.
 						ul.section__tags.tags.tags--on-game
 							li.tags__item AngularJS
 							li.tags__item Jade
