--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -66,6 +66,8 @@
 	font-weight 200
 	text-align center
 	color #8492af
+	&--hidden-on-mobile
+		display none
 	
 .section__decorative-img
 	margin-top 2.75rem
@@ -107,6 +109,8 @@
 		
 	.section__text
 		font-size 18px
+		&--hidden-on-mobile
+			display inline
 		
 	.section__decorative-img
 		&--on-game-phone-1
