--- a/styl/blocks/project-features.styl
+++ b/styl/blocks/project-features.styl
@@ -68,25 +68,17 @@
 				position relative
 				box-sizing border-box
 				width 26rem
-				// &::before
-				// 	content ""
-				// 	position absolute
-				// 	top 0
-				// 	left 22px
-				// 	height 100%
-				// 	border-left 2px solid #555
 				
 			.project-features__item
 				position relative
 				padding-top 0
 				padding-bottom 3.2rem
 				padding-left 4.5rem
-				// margin-bottom 3.2rem
 				&::before
 					content ""
 					position absolute
 					width 2px
-					height 20%
+					height 25%
 					top 0
 					left 22px
 					background-color #555
@@ -94,7 +86,7 @@
 					content ""
 					position absolute
 					width 2px
-					height 20%
+					height 25%
 					bottom 0
 					left 22px
 					background-color #555
@@ -103,37 +95,19 @@
 					.project-features__icon-wrapper
 						top 50%
 						left 0
-						&::before
-							width 100%
-							height 100%
-							top 0
-							left 0
-							background-color transparent
+						&::before 
+							display none
 				&:nth-child(1)
 					.project-features__icon-wrapper
 						left 5px
-				// &:nth-child(2)
-				// 	.project-features__icon-wrapper
-				// 		top 35%
 				&:nth-child(3)
 					.project-features__icon-wrapper
-						// top 10%
 						left 5px
 			
 			.project-features__icon-wrapper
 				left 0
 				top 50%
-				// height 60%
 				transform translateX(0) translateY(-50%)
-				&::before
-					width 100%
-					height 100%
-					top 0
-					left 0
-					background-color transparent
-				// svg
-				// 	width auto
-				// 	height 100%
 				
 			.project-features__item-title
 				text-align left
@@ -150,8 +124,10 @@
 	
 			.project-features__item
 				padding-top 4.5rem
+				padding-bottom 0
 				padding-left 0
-				margin-bottom 0
+				&::before, &::after
+					display none
 				&:nth-child(n+2)
 					padding-top 4.5rem
 					padding-left 0
@@ -169,6 +145,7 @@
 						left 50%
 						transform translateX(-50%)
 						&::before
+							display block
 							top 50%
 							left 150%
 							width 20rem
