services table without script

--- a/styl/blocks/main-nav.styl
+++ b/styl/blocks/main-nav.styl
@@ -9,7 +9,7 @@
 		width 100%
 		min-height 5.5rem
 		z-index 2
-		// background-color #0e1a35
+		background-color #0e1a35
 		.main-nav__list
 			position fixed
 			top 0
