--- a/styl/index.styl
+++ b/styl/index.styl
@@ -16,6 +16,7 @@
 @import "blocks/main-features-item"
 @import "blocks/slider"
 @import "blocks/portfolio-item"
+@import "blocks/services-table"
 @import "blocks/projects-gallery"
 @import "blocks/project-item"
 @import "blocks/page-footer"
