--- a/styl/blocks/project-item.styl
+++ b/styl/blocks/project-item.styl
@@ -6,7 +6,7 @@
 	background-size cover
 	transition all $transition-duration
 	*
-		z-index 2
+		z-index 1
 	&--booking
 		background-image url("../photos/travel/travel-portfolio-grid.png")
 		
@@ -29,7 +29,7 @@
 		background-image url("../photos/localisation/localisation-portfolio-grid.png")
 
 	&::before
-		content ''
+		content ""
 		position absolute
 		width 100%
 		height 100%
