services table: script beta

--- a/styl/blocks/services-table.styl
+++ b/styl/blocks/services-table.styl
@@ -16,7 +16,7 @@
 			letter-spacing 0.3px
 			color #8492af
 			background-color #fafafc
-			transition all $transition-duration
+			transition all 0.5s ease
 		> *:nth-child(1)
 			position relative
 			width 65vw
@@ -120,6 +120,7 @@
 	text-align center
 	color #fff
 	background-color #576076
+	transition all $transition-duration
 	&:hover, &:active
 		background-color #8492af
 	
