--- a/services/b-index.jade
+++ b/services/b-index.jade
@@ -138,15 +138,38 @@ html(lang="en")
 				})();
 
 				var table = document.querySelector('.services-table table'),
-						tableColumnFirst = table.querySelectorAll('tr > *:nth-child(2)'),
-						tableColumnSecond = table.querySelectorAll('tr > *:nth-child(3)'),
-						tableColumnThird = table.querySelectorAll('tr > *:nth-child(4)'),
+						tableColumnFirstItems = table.querySelectorAll('tr > *:nth-child(2)'),
+						tableColumnSecondItems = table.querySelectorAll('tr > *:nth-child(3)'),
+						tableColumnThirdItems = table.querySelectorAll('tr > *:nth-child(4)'),
 						columnCurrent = 1,
 						switchPrev = table.querySelector('.services-table__switch-btn--prev'),
 						switchNext = table.querySelector('.services-table__switch-btn--next');
 
 				function tableSwitch (index) {
-					
+					if (index ==1) {
+						tableColumnSecondItems.forEach(function (item, index) {
+							tableColumnSecondItems[index].style.transform = '';
+							tableColumnSecondItems[index].style.opacity = '0';
+						});
+					}
+
+					if (index == 2) {
+						tableColumnSecondItems.forEach(function (item, index) {
+							tableColumnSecondItems[index].style.transform = 'translateX(-100%)';
+							tableColumnSecondItems[index].style.opacity = '1';
+						});
+						tableColumnThirdItems.forEach(function (item, index) {
+							tableColumnThirdItems[index].style.transform = 'translateX(-100%)';
+							tableColumnThirdItems[index].style.opacity = '0';
+						});
+					}
+
+					if (index == 3) {
+						tableColumnThirdItems.forEach(function (item, index) {
+							tableColumnThirdItems[index].style.transform = 'translateX(-200%)';
+							tableColumnThirdItems[index].style.opacity = '1';
+						});
+					}
 					columnCurrent = index;
 				}
 
