--- a/parts/b-footer.jade
+++ b/parts/b-footer.jade
@@ -5,6 +5,8 @@ mixin b-footer(modifier)
 				.main-nav__list-wrapper
 					ul.main-nav__list
 						li.main-nav__item
+							a(href="/b-index.html") Home
+						li.main-nav__item
 							a(href="/services/b-index.html") Services
 						li.main-nav__item
 							a(href="/portfolio/b-index.html") Portfolio
