--- a/portfolio/b-index.jade
+++ b/portfolio/b-index.jade
@@ -78,7 +78,7 @@ html(lang="en")
 										a.project-item__link-btn.btn Details
 											include ../icons/arrow-go
 			include ../parts/b-footer
-			+b-footer("main")
+			+b-footer("portfolio")
 		script.
 			(function() {
 				var navMain = document.querySelector('.main-nav');
