--- a/portfolio/on-game/index.jade
+++ b/portfolio/on-game/index.jade
@@ -6,7 +6,7 @@ html(lang="en")
 		.page-wrapper
 
 			include ../../parts/b-header
-			+b-header("project", "on-game")
+			+b-header("project-on-game")
 
 			main.page-content
 
@@ -120,7 +120,7 @@ html(lang="en")
 						a.section__btn.btn.btn--on-game Next projects
 		
 			include ../../parts/b-footer
-			+b-footer("on-game")
+			+b-footer("project-on-game")
 		script.
 			(function() {
 				var navMain = document.querySelector('.main-nav');
