--- a/services/b-index.jade
+++ b/services/b-index.jade
@@ -117,7 +117,7 @@ html(lang="en")
 									a.services-table__btn(href="/contact-us/b-index.html") Start Now
 
 			include ../parts/b-footer
-			+b-footer("main")
+			+b-footer("services")
 
 			script.
 				(function() {
