--- a/styl/blocks/main-nav.styl
+++ b/styl/blocks/main-nav.styl
@@ -1,5 +1,13 @@
 .main-nav
 	font-family $main-font
+	
+	&--hp
+		background-color transparent
+		
+	&--services,
+	&--portfolio,
+	&--contact-us
+		background-color $main-color
 			
 	&--top
 		position absolute
@@ -9,7 +17,7 @@
 		width 100%
 		min-height 5.5rem
 		z-index 2
-		background-color #0e1a35
+		// background-color #0e1a35
 		.main-nav__list
 			position fixed
 			top 0
