--- a/styl/blocks/page-footer.styl
+++ b/styl/blocks/page-footer.styl
@@ -5,9 +5,12 @@
 	color #576076
 	a
 		color #576076
-	&--main
+	&--hp,
+	&--services,
+	&--portfolio,
+	&--contact-us
 		background-color $main-color
-	&--on-game
+	&--project-on-game
 		color #6a6a6a
 		background-color $main-color--on-game
 		a
