--- a/styl/blocks/slider.styl
+++ b/styl/blocks/slider.styl
@@ -64,6 +64,7 @@
 	border solid 1px #e3eaf3
 	border-radius 50%
 	outline none
+	cursor pointer
 	&--active
 		background-color #8492af
 		border solid 1px #778ab4
