--- a/b-index.jade
+++ b/b-index.jade
@@ -6,7 +6,7 @@ html(lang="en")
 		.page-wrapper
 
 			include parts/b-header
-			+b-header("main")
+			+b-header("hp")
 
 			main.page-content#main
 
@@ -141,7 +141,7 @@ html(lang="en")
 						a.section__btn.btn(href="/portfolio") Go to portfolio
 							include icons/arrow-go
 			include parts/b-footer
-			+b-footer("main")
+			+b-footer("hp")
 		script.
 			(function() {
 				var navMain = document.querySelector('.main-nav'),
