--- a/styl/blocks/page-header.styl
+++ b/styl/blocks/page-header.styl
@@ -1,5 +1,5 @@
 .page-header
-	&--main
+	&--hp
 		box-sizing border-box
 		height 100%
 		min-height 500px
@@ -7,10 +7,10 @@
 		background-image url("../photos/landing-small.jpg")
 		background-repeat no-repeat
 		background-size cover
-	&--project
+		
+	&--project-on-game
 		min-height 17rem
 		background-repeat no-repeat
-	&--on-game
 		background-image url("../photos/on-game/bg.jpg")
 		background-size 300%
 		background-position center
