--- a/portfolio/b-index.jade
+++ b/portfolio/b-index.jade
@@ -18,14 +18,14 @@ html(lang="en")
 				section.section.section--without-padding-top
 					.projects-gallery
 						.projects-gallery__wrapper
-							.slider__switcher
-								button.slider__switch-btn.slider__switch-btn--prev(type="button")
+							.switcher
+								button.switcher__btn.switcher__btn--prev(type="button")
 									include ../icons/left-arrow
-								h3.slider__slide-name.slider__slide-name--active All
-								h3.slider__slide-name Web Development
-								h3.slider__slide-name Mobile Development
-								h3.slider__slide-name Product Design
-								button.slider__switch-btn.slider__switch-btn--next(type="button")
+								h3.switcher__name.switcher__name--active All
+								h3.switcher__name Web Development
+								h3.switcher__name Mobile Development
+								h3.switcher__name Product Design
+								button.switcher__btn.switcher__btn--next(type="button")
 									include ../icons/left-arrow
 							ul.projects-gallery__list
 								li.project-item.project-item--booking
