--- a/styl/blocks/portfolio-item.styl
+++ b/styl/blocks/portfolio-item.styl
@@ -34,7 +34,10 @@
 			img
 				width 28rem
 		
-// @media $desktop-widths
+@media $desktop-widths
 
-// 	.portfolio-item
-// 		flex-direction row
+	.portfolio-item
+		align-items flex-start
+		
+	.portfolio-item__descr
+		text-align left
