--- a/styl/index.styl
+++ b/styl/index.styl
@@ -5,6 +5,7 @@
 @import "blocks/input-box"
 @import "blocks/link"
 @import "blocks/tags"
+@import "blocks/switcher"
 @import "blocks/page-wrapper"
 @import "blocks/page-header"
 @import "blocks/logo"
