--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -58,6 +58,8 @@
 	font-weight 100
 	text-align center
 	color #0e1a35
+	&--text-left
+		text-align left
 	
 .section__text
 	padding 0
@@ -66,6 +68,10 @@
 	font-weight 200
 	text-align center
 	color #8492af
+	&--text-left
+		text-align left
+	&--with-margin-bottom
+		margin-bottom 1rem
 	&--hidden-on-mobile
 		display none
 	
@@ -148,3 +154,7 @@
 			
 		&--on-game-score-block
 			padding-top 5rem
+			
+	.section__wrapper
+		&--tight
+			width 65%
