--- a/styl/blocks/slider.styl
+++ b/styl/blocks/slider.styl
@@ -1,45 +1,5 @@
 .slider
 	overflow hidden
-	
-.slider__switcher
-	display flex
-	justify-content space-between
-	margin-bottom 1rem
-	border-bottom 1px solid #e4e4f1
-
-.slider__switch-btn
-	width 2rem
-	height 2rem
-	padding 0
-	background-color transparent
-	border none
-	outline none
-	cursor pointer
-	&--next
-		svg
-			transform rotate(180deg)
-	
-.slider__slide-name
-	position relative
-	display none
-	padding 0
-	margin 0
-	font-size 14px
-	font-weight 400
-	letter-spacing 0.3px
-	text-transform uppercase
-	text-align center
-	color #8492af
-	&::after
-		content ""
-		position absolute
-		bottom -1px
-		left 0
-		width 100%
-		height 2px
-		background-color #8492af
-	&--active
-		display block
 		
 .slider__slides-wrapper
 	ul-reset()
@@ -64,7 +24,11 @@
 	border solid 1px #e3eaf3
 	border-radius 50%
 	outline none
+	transition all $transition-duration
 	cursor pointer
 	&--active
 		background-color #8492af
 		border solid 1px #778ab4
+	&:not(&--active):hover
+		background-color rgba(#8492af, 0.5)
+		border-color rgba(#778ab4, 0.3)
